--- a/exercise_window.ui
+++ b/exercise_window.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>515</width>
-    <height>461</height>
+    <width>520</width>
+    <height>469</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -157,27 +157,6 @@
    </property>
    <property name="text">
     <string>Write 1 more time</string>
-   </property>
-  </widget>
-  <widget class="QLabel" name="label_score">
-   <property name="geometry">
-    <rect>
-     <x>220</x>
-     <y>420</y>
-     <width>61</width>
-     <height>16</height>
-    </rect>
-   </property>
-   <property name="font">
-    <font>
-     <pointsize>10</pointsize>
-    </font>
-   </property>
-   <property name="text">
-    <string>Score: 20</string>
-   </property>
-   <property name="alignment">
-    <set>Qt::AlignCenter</set>
    </property>
   </widget>
   <widget class="QLabel" name="label_word_spanish">
@@ -356,6 +335,19 @@
    </property>
    <property name="placeholderText">
     <string>write the word</string>
+   </property>
+  </widget>
+  <widget class="QProgressBar" name="progressBar">
+   <property name="geometry">
+    <rect>
+     <x>20</x>
+     <y>420</y>
+     <width>471</width>
+     <height>23</height>
+    </rect>
+   </property>
+   <property name="value">
+    <number>24</number>
    </property>
   </widget>
  </widget>
